# LT-rs

./: .gitignore  Cargo.toml  LICENSE  README.md  landtrendr.pyi  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: ag_ia_distyear.tif  ag_ia_source.tif  arid_nv_distyear.tif  arid_nv_source.tif  forest_or_distyear.tif  gee_source.tif  gee_truth.json  nbr_1984_2016.npz
python/: ablate.py  compare.py  compare_maps.py  fetch_nbr.py  fetch_nbr_lazycogs.py  gee_dist_map.py  gee_truth.py  idl_compare.py  idl_vs_gee_vs_rust_map.py  make_dist_map.py  paper_compare.py  param_compare_fig.py  requirements.txt
src/: lib.rs  python.rs
tests/: order_independence.rs  regression.rs
