[package]
name = "landtrendr"
version = "0.4.0"
edition = "2021"
license = "MIT"
description = "LandTrendr temporal segmentation — standalone Rust port, validated against the original LandTrendr-IDL and native GEE."

[lib]
name = "landtrendr"
crate-type = ["cdylib", "rlib"]

[features]
default = ["parallel"]
# Rayon across pixels in the raster functions. Default-on; disable
# (--no-default-features) for single-threaded targets such as wasm32.
parallel = ["dep:rayon"]
python = ["dep:pyo3", "dep:numpy"]

[dependencies]
# abi3-py310: one wheel covers CPython >=3.10 (incl. 3.14), not one per version.
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py310"], optional = true }
numpy = { version = "0.28", optional = true }
rayon = { version = "1.10", optional = true }

[profile.release]
opt-level = 3
lto = true
